infrastructure/monitoring/grafana-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-loadbalancer
  namespace: monitoring
  labels:
    app: loki-grafana
spec:
  type: LoadBalancer
  loadBalancerClass: "tailscale"
  selector:
    app: loki-grafana
  ports:
    - name: https
      port: 443
      targetPort: 3000
