infrastructure/monitoring/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
spec:
  defaultBackend:
    service:
      name: loki-grafana
      port:
        number: 80
  ingressClassName: tailscale
  tls:
  - hosts:
    - grafana
